chore(Api): parametrize indicators
